--- a/index.html
+++ b/index.html
@@ -1362,6 +1362,9 @@
     });
   })();
   </script>
-
+  <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
