Update index.html -  move analytics to new entry point

--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -202,5 +202,9 @@
   <footer>
     © 2025 3dvr.tech — Open Source. Open Future.
   </footer>
+  <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
