Use smaller social preview image

--- a/truth/index.html
+++ b/truth/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Truth & Love Through Computers — 3dvr.tech" />
   <meta property="og:description" content="Open technology made humane, transparent, and community‑owned." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/media/og-truth-love.jpg" />
+  <meta property="og:image" content="https://3dvr.tech/3DVR.png" />
   <meta name="theme-color" content="#0a1230" />
   <link rel="icon" href="/favicon.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
