Add PWA install support without prompting

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <meta name="theme-color" content="#0f0f0f" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta
@@ -417,5 +419,6 @@
       <span aria-hidden="true">→</span>
     </a>
   </footer>
+  <script src="/pwa.js"></script>
 </body>
 </html>
