--- a/spirituality/index.html
+++ b/spirituality/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html><html lang="en">
 <head>
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <meta name="theme-color" content="#0f0f0f" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>3DVR.Tech · Spirituality</title>
@@ -290,5 +292,6 @@
         setTimeout(()=>document.getElementById('nl-msg').classList.add('hidden'), 2000);
       }
     });
-  </script></body>
+  </script>  <script src="/pwa.js"></script>
+</body>
 </html>
