--- a/subscribe/free-plan.html
+++ b/subscribe/free-plan.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <meta name="theme-color" content="#0f0f0f" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark light" />
@@ -192,5 +194,6 @@
   <footer>
     © 2025 3dvr.tech — Open Source. Open Future.
   </footer>
+  <script src="/pwa.js"></script>
 </body>
 </html>
