--- a/truth/index.html
+++ b/truth/index.html
@@ -2,6 +2,8 @@
 
 <html lang="en">
 <head>
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <meta name="theme-color" content="#0f0f0f" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Truth & Love Through Computers — 3dvr.tech</title>
@@ -225,5 +227,6 @@
     </div>
   </footer>  <script>
     document.getElementById('y').textContent = new Date().getFullYear();
-  </script></body>
+  </script>  <script src="/pwa.js"></script>
+</body>
 </html>
