--- a/vision/index.html
+++ b/vision/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <meta name="theme-color" content="#0f0f0f" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>3dvr.tech · Our Vision</title>
@@ -347,5 +349,6 @@
   </footer>
 
   <script>document.getElementById('y').textContent = new Date().getFullYear()</script>
+  <script src="/pwa.js"></script>
 </body>
 </html>
