--- a/wellness/index.html
+++ b/wellness/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <meta name="theme-color" content="#0f0f0f" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>3dvr‑wellness • Technology that supports your nervous system</title>
@@ -334,5 +336,6 @@
       e.target.reset();
     });
   </script>
+  <script src="/pwa.js"></script>
 </body>
 </html>
