Add templates landing page and navigation link

--- a/index.html
+++ b/index.html
@@ -877,6 +877,7 @@
       <a href="#testimonials">Testimonials</a>
       <a href="#team">Team</a>
       <a href="#about">About</a>
+      <a href="templates/index.html">Templates</a>
       <a href="pages/portfolio.html">Portfolio</a>
       <a href="https://portal.3dvr.tech">Portal</a>
     </nav>
