Clarify free plan includes landing page

--- a/subscribe/free-plan.html
+++ b/subscribe/free-plan.html
@@ -124,7 +124,7 @@
     <section class="hero">
       <span class="eyebrow">Subscription</span>
       <h1>Free Plan</h1>
-      <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
+      <p>Discover your vision and get started with a free landing page on a 3dvr.tech subdomain.</p>
       <div class="price">$0 / month</div>
       <div class="actions">
         <a class="cta primary" href="https://portal.3dvr.tech/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
@@ -137,6 +137,7 @@
       <p>Everything you need to start experimenting with immersive experiences and builder tooling—no credit card required.</p>
       <ul class="feature-list">
         <li>A hosted 3dvr.tech subdomain you can share from day one.</li>
+        <li>A done-for-you landing page to showcase your idea for free.</li>
         <li>All public documentation, starter templates, and quick-start guides.</li>
         <li>Regular community updates, roadmap previews, and open office recaps.</li>
         <li>Access to our open-source repositories, experiments, and design kits.</li>
