--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -127,6 +127,7 @@
         <p class="tagline">Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
         <div class="price">$0</div>
         <ul>
+          <li>Done-for-you landing page on your 3dvr.tech subdomain</li>
           <li>Access to public docs & starter templates</li>
           <li>Community updates & roadmap</li>
           <li>Open-source repos and experiments</li>
