Add portal spotlight section to homepage

--- a/index.html
+++ b/index.html
@@ -1142,6 +1142,30 @@
     </p>
   </section>
 
+  <section id="portal" style="background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); text-align: center;">
+    <h2>Check out the Portal</h2>
+    <p style="max-width: 820px; margin: 1rem auto 2rem; font-size: 1.15rem; color: #e5f7f3;">
+      Peek behind the curtain and explore the experiments we're building with the community. The portal gives you self-serve access to work-in-progress demos, analytics snapshots, and the tools that power our launch plans.
+    </p>
+    <div class="card-grid" style="margin-bottom: 2rem;">
+      <div class="card" style="background: rgba(0, 0, 0, 0.35); text-align: left;">
+        <h3 style="color: var(--accent);">Live experiments</h3>
+        <p>Browse prototypes, VR scenes, and micro-apps shipping soon. We share changelogs so you can track how your feedback shapes the next release.</p>
+      </div>
+      <div class="card" style="background: rgba(0, 0, 0, 0.35); text-align: left;">
+        <h3 style="color: var(--accent);">Creator shortcuts</h3>
+        <p>Sign in once to unlock studio tools, asset uploads, and publishing pipelines that connect directly to your projects.</p>
+      </div>
+      <div class="card" style="background: rgba(0, 0, 0, 0.35); text-align: left;">
+        <h3 style="color: var(--accent);">Progress dashboards</h3>
+        <p>Follow milestone updates, performance snapshots, and roadmap notes as we ship new builds across web and XR.</p>
+      </div>
+    </div>
+    <a class="cta" href="https://portal.3dvr.tech" target="_blank" rel="noopener" style="display: inline-flex; align-items: center; gap: 0.5rem;">
+      Visit portal.3dvr.tech <i class="fas fa-arrow-right" aria-hidden="true"></i>
+    </a>
+  </section>
+
   <!-- SOCIAL LINKS SECTION (desktop href + mobile deep-link) -->
   <section id="social" style="background: #1a1a1a; padding: 3rem 1rem 1.75rem; text-align: center;">
     <h2 style="color: var(--accent); margin-bottom: 1rem;">Follow Us</h2>
