--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         radial-gradient(circle at 84% 80%, rgba(255, 165, 92, 0.5) 0%, rgba(255, 165, 92, 0) 60%),
         radial-gradient(circle at 78% 22%, rgba(95, 39, 205, 0.45) 0%, rgba(95, 39, 205, 0) 60%),
         linear-gradient(140deg, rgba(76, 161, 175, 0.95) 0%, rgba(95, 39, 205, 0.92) 55%, rgba(255, 110, 127, 0.9) 100%);
+      --bg-partners: linear-gradient(145deg, #182848, #2b5876);
       --bg-team: linear-gradient(135deg, #5c258d, #4389a2);
       --bg-about: linear-gradient(135deg, #232526, #414345);
       --text-light: #ffffff;
@@ -688,6 +689,88 @@
       opacity: 1;
     }
 
+    #partners {
+      position: relative;
+      overflow: hidden;
+      isolation: isolate;
+    }
+    #partners::before,
+    #partners::after {
+      content: "";
+      position: absolute;
+      width: clamp(240px, 40vw, 380px);
+      height: clamp(240px, 40vw, 380px);
+      border-radius: 50%;
+      filter: blur(1px);
+      opacity: 0.6;
+      pointer-events: none;
+    }
+    #partners::before {
+      top: -160px;
+      left: 6%;
+      background: radial-gradient(circle, rgba(0, 255, 200, 0.35), rgba(0, 255, 200, 0) 70%);
+    }
+    #partners::after {
+      bottom: -180px;
+      right: 4%;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0) 70%);
+    }
+    .partners-lede {
+      text-align: center;
+      max-width: 820px;
+      margin: 0 auto 2rem;
+      color: rgba(255, 255, 255, 0.85);
+      font-size: 1.1rem;
+      position: relative;
+      z-index: 1;
+    }
+    .partners-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+      gap: 1.5rem;
+      position: relative;
+      z-index: 1;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+    .partner-card {
+      background: rgba(255, 255, 255, 0.12);
+      border-radius: 16px;
+      padding: 1.4rem;
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      box-shadow: 0 12px 26px rgba(6, 20, 40, 0.35);
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+      align-items: flex-start;
+      transition: transform 0.3s ease, background 0.3s ease;
+    }
+    .partner-card:hover {
+      transform: translateY(-6px);
+      background: rgba(255, 255, 255, 0.2);
+    }
+    .partner-mark {
+      width: 48px;
+      height: 48px;
+      border-radius: 14px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0, 255, 200, 0.2);
+      color: var(--accent);
+      font-size: 1.4rem;
+      box-shadow: inset 0 0 0 1px rgba(0, 255, 200, 0.4);
+    }
+    .partner-card h3 {
+      margin: 0;
+      font-size: 1.2rem;
+    }
+    .partner-card p {
+      margin: 0;
+      color: rgba(255, 255, 255, 0.8);
+      font-size: 0.95rem;
+    }
+
     .btn-like {
       display: inline-block; margin-top: auto; font-weight: 700;
       background: var(--accent); color: var(--text-dark);
@@ -875,6 +958,7 @@
       <a href="#features">Features</a>
       <a href="#vision">Vision</a>
       <a href="#testimonials">Testimonials</a>
+      <a href="#partners">Partners</a>
       <a href="#team">Team</a>
       <a href="#about">About</a>
       <a href="templates/index.html">Templates</a>
@@ -1087,6 +1171,46 @@
       <div class="card testimonial-card" data-link="https://cruisersgarage.com/"><h3>Cruisers Garage</h3><p>“They built a slick, mobile-friendly landing page for our custom motorcycles in no time. Highly recommend.”</p></div>
       <div class="card testimonial-card" data-link="https://www.gif.edu.gt/"><h3>GIF English</h3><p>“We needed a site that could handle English lessons, scheduling, and videos. 3dvr.tech delivered exactly what we imagined.”</p></div>
       <div class="card testimonial-card" data-link="https://www.sdvanlife.com/"><h3>SD Vanlife</h3><p>“Thomas and 3dvr.tech gave us the tools and guidance we needed to launch our van conversion business online.”</p></div>
+    </div>
+  </section>
+
+  <section id="partners" style="background: var(--bg-partners);">
+    <h2>Member Brands & Partners</h2>
+    <p class="partners-lede">
+      Our members span wellness, education, mobility, and creative tech. We celebrate the brands
+      who build with us and keep the community moving forward.
+    </p>
+    <div class="partners-grid">
+      <div class="partner-card">
+        <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-seedling"></i></span>
+        <h3>Bloom Circuit</h3>
+        <p>Regenerative wellness collective crafting mindful digital experiences.</p>
+      </div>
+      <div class="partner-card">
+        <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-book-open"></i></span>
+        <h3>Signal Grove Academy</h3>
+        <p>Community-led learning hub for future-ready educators.</p>
+      </div>
+      <div class="partner-card">
+        <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-mountain-sun"></i></span>
+        <h3>Horizon Atlas</h3>
+        <p>Outdoor storytellers building immersive, map-first journeys.</p>
+      </div>
+      <div class="partner-card">
+        <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-bolt"></i></span>
+        <h3>Nova Roots Studio</h3>
+        <p>Design-forward product lab bringing sustainable brands online.</p>
+      </div>
+      <div class="partner-card">
+        <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-water"></i></span>
+        <h3>Riverline Mobility</h3>
+        <p>Electric transport collective empowering local makers.</p>
+      </div>
+      <div class="partner-card">
+        <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-wand-magic-sparkles"></i></span>
+        <h3>Bright Harbor</h3>
+        <p>Creative tech studio spotlighting bold, inclusive storytelling.</p>
+      </div>
     </div>
   </section>
 
