Add friends and family landing page

--- a/index.html
+++ b/index.html
@@ -1354,6 +1354,7 @@
 
   <footer style="background: #111; color: #aaa; text-align: center; padding: 2rem 1rem; font-size: 0.95rem;">
     <p style="margin-top: 0;">&copy; 2025 <a href="https://3dvr.tech" target="_blank" style="color: var(--accent);">3dvr.tech</a> — Open Source. Open Future.</p>
+    <p><a href="friends.html" style="color: var(--accent); text-decoration: none;">Friends &amp; Family</a></p>
     <p><a href="https://github.com/tmsteph/3dvr-web" target="_blank" style="color: var(--accent); text-decoration: none;">✏️ Edit this page on GitHub</a></p>
   </footer>
 
