--- a/support.html
+++ b/support.html
@@ -199,6 +199,7 @@
 
   <footer>
     <p>&copy; 2025 <a href="https://3dvr.tech" target="_blank">3dvr.tech</a> — Open Source. Open Future.</p>
+    <p><a href="friends.html">Friends &amp; Family</a></p>
   </footer>
 
   <script>
