Center partner grid rows

--- a/index.html
+++ b/index.html
@@ -726,11 +726,12 @@
     }
     .partners-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 260px));
       gap: 1.5rem;
       position: relative;
       z-index: 1;
       max-width: 1000px;
+      justify-content: center;
       margin: 0 auto;
     }
     .partner-card {
