Refine Marey partner description

--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
       <a class="partner-card" href="https://mareyintro.vercel.app/" target="_blank" rel="noopener">
         <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-seedling"></i></span>
         <h3>Marey Intro</h3>
-        <p>Warm, inviting introduction page crafted for a personal brand launch.</p>
+        <p>Creative brand storytelling and visuals crafted for a bold, memorable launch.</p>
       </a>
       <a class="partner-card" href="https://www.brendadyestephens.com/" target="_blank" rel="noopener">
         <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-book-open-reader"></i></span>
