Rename Marey partner label

--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
       </a>
       <a class="partner-card" href="https://mareyintro.vercel.app/" target="_blank" rel="noopener">
         <span class="partner-mark" aria-hidden="true"><i class="fa-solid fa-seedling"></i></span>
-        <h3>Marey Intro</h3>
+        <h3>Marey</h3>
         <p>Creative brand storytelling and visuals crafted for a bold, memorable launch.</p>
       </a>
       <a class="partner-card" href="https://www.brendadyestephens.com/" target="_blank" rel="noopener">
